cmake_minimum_required(VERSION 3.17)
project(File_I_O)

set(CMAKE_CXX_STANDARD 14)

#add_executable(File_I_O WeirdAlgorithm.cpp)
#add_executable(File_I_O FencePainting.cpp)
#add_executable(File_I_O CircularBarn.cpp)
#add_executable(File_I_O BlockGame.cpp)
#add_executable(File_I_O TeamTicTacToe.cpp)
#add_executable(File_I_O MowingTheField.cpp)
#add_executable(File_I_O Censoring.cpp)
#add_executable(File_I_O MilkMeasurement.cpp)
#add_executable(File_I_O StuckInARut.cpp)
#add_executable(File_I_O BlockedBillboard.cpp)
#add_executable(File_I_O SquarePasture.cpp)
#add_executable(File_I_O BlockedBillboard2.cpp)
#add_executable(File_I_O WhiteSheet.cpp)
#add_executable(File_I_O TwoTables.cpp)
#add_executable(File_I_O MaximumDistance.cpp)
#add_executable(File_I_O DiamondCollector.cpp)
#add_executable(File_I_O DaisyChains.cpp)
#add_executable(File_I_O CountingLiars.cpp)
#add_executable(File_I_O CowGymnastics.cpp)
#add_executable(File_I_O BovineGenomics.cpp)
#add_executable(File_I_O Triangles.cpp)
#add_executable(File_I_O Lifeguards.cpp)
#add_executable(File_I_O WhyDidTheCowCrossTheRoad2.cpp)
#add_executable(File_I_O GuessTheAnimal.cpp)
#add_executable(File_I_O BovineGenomics.cpp)
#add_executable(File_I_O LoadBalancing.cpp)
#add_executable(File_I_O SleepingInClass.cpp)
#add_executable(File_I_O ContaminatedMilk.cpp)
#add_executable(File_I_O CowntactTracing.cpp)
#add_executable(File_I_O BullInAChinaShop.cpp)
#add_executable(File_I_O AppleDivision.cpp)
#add_executable(File_I_O AppleDivision2.cpp)
#add_executable(File_I_O CreatingStrings2.cpp)
#add_executable(File_I_O CreatingStrings.cpp)
#add_executable(File_I_O ChessboardAndQueens2.cpp)
#add_executable(File_I_O TwentyFour.cpp)
#add_executable(File_I_O LivestockLineup.cpp)
#add_executable(File_I_O BackAndForth.cpp)
#add_executable(File_I_O DistinctNumbers.cpp)
#add_executable(File_I_O Kayaking.cpp)
#add_executable(File_I_O WhyDidTheCowCrossTheRoad3.cpp)
#add_executable(File_I_O AngryCows.cpp)
#add_executable(File_I_O DistinctNumbers2.cpp)
#add_executable(File_I_O WhereAmI.cpp)
#add_executable(File_I_O YearOfTheCow.cpp)
#add_executable(File_I_O DontBeLast.cpp)
#add_executable(File_I_O CitiesAndStates.cpp)
#add_executable(File_I_O JuryMarks.cpp)
#add_executable(File_I_O MadeUp.cpp)
#add_executable(File_I_O SleepyCowHerding.cpp)
#add_executable(File_I_O MadScientist.cpp)
#add_executable(File_I_O CowTipping.cpp)
#add_executable(File_I_O OutofPlace.cpp)
#add_executable(File_I_O PhotoShoot.cpp)
#add_executable(File_I_O Race.cpp)
#add_executable(File_I_O EvenMoreOddPhotos.cpp)
#add_executable(File_I_O SleepyCowSorting.cpp)
#add_executable(File_I_O MilkingOrder.cpp)
#add_executable(File_I_O TheGreatRevegetation.cpp)
#add_executable(File_I_O MilkFactory.cpp)
#add_executable(File_I_O SwapitySwap.cpp)
#add_executable(File_I_O CowEvolution.cpp)
#add_executable(File_I_O TamingTheHerd.cpp)
#add_executable(File_I_O ModernArt.cpp)
#add_executable(File_I_O Hoofball.cpp)
#add_executable(File_I_O SpacedOut.cpp)
#add_executable(File_I_O FamilyTree.cpp)
#add_executable(File_I_O ReviewShellGame.cpp)
#add_executable(File_I_O ReviewBlockGame.cpp)
#add_executable(File_I_O ReviewMixingMilk.cpp)
#add_executable(File_I_O ReviewFencePainting.cpp)
#add_executable(File_I_O ReviewBlockedBillboard.cpp)
#add_executable(File_I_O ReviewBlockedBillboardII.cpp)
#add_executable(File_I_O ReviewCowGymnastics.cpp)
#add_executable(File_I_O ReviewCowGenomics.cpp)
add_executable(File_I_O ReviewCowGenomicsI.cpp)