cmake_minimum_required(VERSION 3.17)
project(Bronze)

set(CMAKE_CXX_STANDARD 14)

#add_executable(Bronze WeirdAlgorithm.cpp)
#add_executable(Bronze FencePainting.cpp)
#add_executable(Bronze CircularBarn.cpp)
#add_executable(Bronze BlockGame.cpp)
#add_executable(Bronze TeamTicTacToe.cpp)
#add_executable(Bronze MowingTheField.cpp)
#add_executable(Bronze Censoring.cpp)
#add_executable(Bronze MilkMeasurement.cpp)
#add_executable(Bronze StuckInARut.cpp)
#add_executable(Bronze BlockedBillboard.cpp)
#add_executable(Bronze SquarePasture.cpp)
#add_executable(Bronze BlockedBillboard2.cpp)
#add_executable(Bronze WhiteSheet.cpp)
#add_executable(Bronze TwoTables.cpp)
#add_executable(Bronze MaximumDistance.cpp)
#add_executable(Bronze DiamondCollector.cpp)
#add_executable(Bronze DaisyChains.cpp)
#add_executable(Bronze CountingLiars.cpp)
#add_executable(Bronze CowGymnastics.cpp)
#add_executable(Bronze BovineGenomics.cpp)
#add_executable(Bronze Triangles.cpp)
#add_executable(Bronze Lifeguards.cpp)
#add_executable(Bronze WhyDidTheCowCrossTheRoad2.cpp)
#add_executable(Bronze GuessTheAnimal.cpp)
#add_executable(Bronze BovineGenomics.cpp)
#add_executable(Bronze LoadBalancing.cpp)
#add_executable(Bronze SleepingInClass.cpp)
#add_executable(Bronze ContaminatedMilk.cpp)
#add_executable(Bronze CowntactTracing.cpp)
#add_executable(Bronze BullInAChinaShop.cpp)
#add_executable(Bronze AppleDivision.cpp)
#add_executable(Bronze AppleDivision2.cpp)
#add_executable(Bronze CreatingStrings2.cpp)
#add_executable(Bronze CreatingStrings.cpp)
#add_executable(Bronze ChessboardAndQueens2.cpp)
#add_executable(Bronze TwentyFour.cpp)
#add_executable(Bronze LivestockLineup.cpp)
#add_executable(Bronze BackAndForth.cpp)
#add_executable(Bronze DistinctNumbers.cpp)
#add_executable(Bronze Kayaking.cpp)
#add_executable(Bronze WhyDidTheCowCrossTheRoad3.cpp)
#add_executable(Bronze AngryCows.cpp)
#add_executable(Bronze DistinctNumbers2.cpp)
#add_executable(Bronze WhereAmI.cpp)
#add_executable(Bronze YearOfTheCow.cpp)
#add_executable(Bronze DontBeLast.cpp)
#add_executable(Bronze CitiesAndStates.cpp)
#add_executable(Bronze JuryMarks.cpp)
#add_executable(Bronze MadeUp.cpp)
#add_executable(Bronze SleepyCowHerding.cpp)
#add_executable(Bronze MadScientist.cpp)
#add_executable(Bronze CowTipping.cpp)
#add_executable(Bronze OutofPlace.cpp)
#add_executable(Bronze PhotoShoot.cpp)
#add_executable(Bronze Race.cpp)
#add_executable(Bronze EvenMoreOddPhotos.cpp)
#add_executable(Bronze SleepyCowSorting.cpp)
#add_executable(Bronze MilkingOrder.cpp)
#add_executable(Bronze TheGreatRevegetation.cpp)
#add_executable(Bronze MilkFactory.cpp)
#add_executable(Bronze SwapitySwap.cpp)
#add_executable(Bronze CowEvolution.cpp)
#add_executable(Bronze TamingTheHerd.cpp)
#add_executable(Bronze ModernArt.cpp)
#add_executable(Bronze Hoofball.cpp)
#add_executable(Bronze SpacedOut.cpp)
#add_executable(Bronze FamilyTree.cpp)
#add_executable(Bronze ReviewShellGame.cpp)
#add_executable(Bronze ReviewBlockGame.cpp)
#add_executable(Bronze ReviewMixingMilk.cpp)
#add_executable(Bronze ReviewFencePainting.cpp)
#add_executable(Bronze ReviewBlockedBillboard.cpp)
#add_executable(Bronze ReviewBlockedBillboardII.cpp)
#add_executable(Bronze ReviewCowGymnastics.cpp)
#add_executable(Bronze ReviewCowGenomics.cpp)
#add_executable(Bronze ReviewCowGenomicsI.cpp)
#add_executable(Bronze ReviewLoadBalancing.cpp)
#add_executable(Bronze ReviewSleepingInClass.cpp)
#add_executable(Bronze ReviewCowntactTracing.cpp)
#add_executable(Bronze ReviewAppleDivision.cpp)
add_executable(Bronze ReviewChessboardAndQueens.cpp)